@@ -38,6 +38,8 @@
 <p>2017-09-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/map.c (MagickMapCloneMap): Fix SourceForge issue #477
+&quot;assertion failure in MagickMapIterateNext&quot;.</li>
 <li>coders/emf.c (ReadEnhMetaFile): Fix SourceForge issue #475 &quot;NULL
 pointer dereference in ReadEnhMetaFile&quot;.</li>
 <li>coders/cineon.c (ReadCINEONImage): Fix SourceForge issue #473
